# Day21-Track2-CI-CD-for-AI-Systems

./: main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: mlops.yml
src/: serve.py  train.py
tasks/: buoc-3.md
