[project]
name = "day21-track2-ci-cd-for-ai-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow==2.13.0",
    "scikit-learn==1.4.2",
    "pandas==2.2.2",
    "dvc[s3,gs]==3.50.1",
    "pathspec==0.11.2",
    "pytest==8.2.0",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "joblib==1.4.2",
    "google-cloud-storage==2.16.0",
    "pyyaml==6.0.1",
    "boto3==1.34.0",
    "setuptools",
]
